# risc-zero-study

./: ;
contracts/: RiscVotingPlugin.sol
methods/: Cargo.toml
methods/guest/: Cargo.toml
methods/src/: lib.rs
tests/: RiscVotingPlugin.t.sol
