[package]
name = "guests"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "is-even"
path = "src/bin/is_even.rs"

[workspace]

[dependencies]
alloy-primitives = { version = "0.7.7", default-features = false, features = [
  "rlp",
  "serde",
  "std",
] }
alloy-sol-types = { version = "0.7.7" }
risc0-zkvm = { version = "1.0.2", default-features = false, features = ['std'] }
risc0-steel = { version = "0.11.1" }

tiny-keccak = { version = "2.0", features = ["keccak"] }
k256 = { version = "0.13.3", features = [
  "arithmetic",
  "serde",
  "expose-field",
  "std",
  "ecdsa",
], default-features = false }

[profile.release]
lto = "thin"
